fdisk: disable DOS mode and cylinders by default
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/fdisk/fdisk.8
+++ b/fdisk/fdisk.8
@@ -190,7 +190,7 @@ between logical and physical sector size. This option changes both sector sizes 
 Print help and then exit.
 .TP
 .BI \-c
-Switch off DOS-compatible mode. (Recommended)
+Switch off DOS-compatible mode. (Default)
 .TP
 .BI "\-C " cyls
 Specify the number of cylinders of the disk.
@@ -215,7 +215,7 @@ If no devices are given, those mentioned in
 .TP
 .B \-u
 When listing partition tables, give sizes in sectors instead
-of cylinders.
+of cylinders. (Default)
 .TP
 .BI "\-s " partition
 The
