lscpu: fix typo in lscpu.1
Signed-off-by: Francesco Cosoleto <cosoleto@gmail.com>

--- a/sys-utils/lscpu.1
+++ b/sys-utils/lscpu.1
@@ -33,5 +33,5 @@ Cai Qian <qcai@redhat.com>
 Karel Zak <kzak@redhat.com>
 .fi
 .SH AVAILABILITY
-The setarch command is part of the util-linux-ng package and is available from
+The lscpu command is part of the util-linux-ng package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
