--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 libblkid
 --------
 
+ - remove strerrr() from debug messages (use %m) to make BLKID_DEBUG= output
+   thread-safe
+
  - add -<BE|LE> suffix to test images for native-endian filesystems (e.g. swap)
    and add support for such functionality to tests/ts/blkid/low-probe
 
@@ -159,9 +162,6 @@ misc
 	It might be worth a thought implementing v3 support
 	(though I am not really sure how much people us minix fs ;-)
 	This might require some major code cleanup in mkfs.minix.
-
- * rtcwake does not support wake from S5/off
-   http://bugzilla.redhat.com/show_bug.cgi?id=449115
 
  * add SELinux security contexts support to the 'ipcs' utility
    http://bugzilla.redhat.com/show_bug.cgi?id=225342
