findmnt: add support for fs-root (subvolumes and bind mounts)
This patch modifies the default output for SOURCE column. All btrfs
subvolume mountpoints and all bind-mount (where source is not root of
FS) will be printed as:

   SOURCE               TARGET
   /dev/sda1[/aaa]      /mnt/test

where /aaa is subvolume name or fs root for bind mounts, it means:

   # mount -t btrfs /dev/sda1 /mnt/test -o subvol=aaa

or:

   # mount --bind /aaa /mnt/test

The info about fs-root is 4th column in /proc/self/mountinfo.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/misc-utils/findmnt.8
+++ b/misc-utils/findmnt.8
@@ -65,6 +65,8 @@ Print the first matching filesystem only.
 Invert the sense of matching.
 .IP "\fB\-l, \-\-list\fP"
 Use the list output format.
+.IP "\fB\-v, \-\-nofsroot\fP"
+Do not print a [/dir] in the SOURCE column for bind-mounts or btrfs subvolumes.
 .IP "\fB\-n, \-\-noheadings\fP"
 Do not print a header line.
 .IP "\fB\-u, \-\-notruncate\fP"
