--- a/disk-utils/blockdev.8
+++ b/disk-utils/blockdev.8
@@ -78,7 +78,7 @@ Set read-only.
 .IP "\fB\-\-setrw\fP"
 Set read-write.
 .SH AUTHOR
-blockdev was written by Andries E. Brouwer and rewrittent by Karel Zak.
+blockdev was written by Andries E. Brouwer and rewritten by Karel Zak.
 .SH AVAILABILITY
 The blockdev command is part of the util-linux-ng package and is available from
 ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
