--- a/mount/mount.8
+++ b/mount/mount.8
@@ -596,6 +596,15 @@ was known as
 Note, the real list of all supported filesystems depends on your
 kernel.
 
+The programs
+.B mount
+and
+.B umount
+support filesystem subtypes.  The subtype is defined by '.subtype' suffix.  For
+example  'fuse.sshfs'. It's recommended to use subtype notation rather than add
+any prefix to the mount source (for example 'sshfs#example.com' is
+depreacated).
+
 For most types all the
 .B mount
 program has to do is issue a simple
