ddate: fix typo in ddate.1
Signed-off-by: Davidlohr Bueso <dave@gnu.org>

--- a/misc-utils/ddate.1
+++ b/misc-utils/ddate.1
@@ -36,10 +36,10 @@ Ordinal number of day in season (i.e., 23)
 .IP %e
 Cardinal number of day in season (i.e., 23rd)
 .IP %H
-Name of current Holyday, if any
+Name of current Holiday, if any
 .IP %N
 Magic code to prevent rest of format from being printed unless today is
-a Holyday.
+a Holiday.
 .IP %n
 Newline
 .IP %t
@@ -78,7 +78,7 @@ Today's St. Tib's Day, 3162.
 .SH BUGS
 
 .B ddate(1)
-will produce undefined behaviour if asked to produce the date for St. Tib's
+will produce undefined behavior if asked to produce the date for St. Tib's
 day and its format string does not contain the St. Tib's Day delimiters
 %{ and %}.
 
