--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 libblkid
 --------
 
+
  - remove strerrr() from debug messages (use %m) to make BLKID_DEBUG= output
    thread-safe
 
@@ -23,7 +24,10 @@ libblkid
 
 
 blkid(8)
-  
+-------
+
+  - add something like "blkid --list-all" to list all supported filesystems/raids
+ 
   - add a new option (-r) that allows to print removable block devices that
     are missing in /proc/partitions, see blkid_probe_all_removable().
 
