mount: add note about context= remount to mount.8
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -840,6 +840,9 @@ option allows you to explicitly label the root inode of a FS being mounted
 before that FS or inode because visable to userspace. This was found to be
 useful for things like stateless linux.
 
+Note that kernel rejects any remount request that includes the context
+option even if unchanged from the current context.
+
 For more details, see
 .BR selinux (8)
 
