mount: fix mount.8, shortname=mixed is now default for vfat
Since Linux kernel commit 955234755ce4a2c33cfc558912aa8f2148cc1fc6,
the default mode for vfat filesystem is 'shortname=mixed'.

Reported-by: Harald Koenig <koenig@linux.de>
Signed-off-by: Petr Uzel <petr.uzel@suse.cz>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -2329,7 +2329,7 @@ preferred display. There are four modes:
 .TP
 .I lower
 Force the short name to lower case upon display; store a long name when
-the short name is not all upper case. This mode is the default.
+the short name is not all upper case.
 .TP
 .I win95
 Force the short name to upper case upon display; store a long name when
@@ -2341,7 +2341,7 @@ not all lower case or all upper case.
 .TP
 .I mixed
 Display the short name as is; store a long name when the short name is not
-all upper case.
+all upper case. This mode is the default since Linux 2.6.32.
 .RE
 
 
