--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1373,8 +1373,8 @@ compatible change and will be ignored by older kernels.
 .TP
 .BR journal_async_commit
 Commit block can be written to disk without waiting for descriptor blocks. If
-enabled older kernels cannot mount the device. This will enable
-'journal_checksum' internally.
+enabled older kernels cannot mount the device.
+This will enable 'journal_checksum' internally.
 .TP
 .BR journal=update
 Update the ext4 filesystem's journal to the current format.
