ddate: revert man page typo
On Sat, Sep 18, 2010 at 03:10:52AM +0300, Anssi Hannula wrote:
> According to wikipedia [1] 'Holyday' was the correct spelling, I
> guess the first hunk should be reverted.
>
> [1] http://en.wikipedia.org/wiki/Discordian_calendar

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/misc-utils/ddate.1
+++ b/misc-utils/ddate.1
@@ -36,10 +36,10 @@ Ordinal number of day in season (i.e., 23)
 .IP %e
 Cardinal number of day in season (i.e., 23rd)
 .IP %H
-Name of current Holiday, if any
+Name of current Holyday, if any
 .IP %N
 Magic code to prevent rest of format from being printed unless today is
-a Holiday.
+a Holyday.
 .IP %n
 Newline
 .IP %t
