swapon: add support for "nofail" fstab mount option
This option is already supported by mount(8) and fsck(8), there is no
reason to have any exception for swap devices. Note that the --ifexists
command line option applies to all swap devices, the "nofail" setting
is per device.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/swapon.8
+++ b/mount/swapon.8
@@ -113,6 +113,12 @@ Devices that are already being used as swap are silently skipped.
 .TP
 .B "\-e, \-\-ifexists"
 Silently skip devices that do not exist.
+The
+.I /etc/fstab
+mount option
+.BI nofail
+may be also used to skip non-existing device.
+
 .TP
 .B "\-f, \-\-fixpgsz"
 Reinitialize (exec /sbin/mkswap) the swap space if its page size does not
